<resources>
    <string name="app_name">GramEsercizi</string>
    <string name="artInd">Неопределенные артикли.  Articolo indeterminativo</string>
    <string name="artIndTxt"> Неопределенный артикль в итальянском языке не имеет формы множественного числа. Во множественном числе значение неопределенности выражается без артикля. Неопределенный артикль в итальянском употребляется:
- когда речь идет о каком-то неопределенном предмете или лице, одном представителе из группы лиц или предметов.    </string>
    <string name="artDetTxt">Потом, если мы уже хотим сказать про конкретного друга или про кого-то или что-то конкретное, то нам уже нужен определенный артикль il / la. Например: Il mio amico è bravo. – Мой друг молодец (то есть именно этот, конкретно о котором идет разговор, не другой друг
La mia amica è buona. – Моя подруга хорошая (именно эта). Если слово начинается на z или s + согласная, то артикль il становится lo: lo zucchero – сахар lo zio – дядя lo sbaglio – ошибка lo specchio – зеркало </string>
    <string name="artDet">Определенный артикль.  Articolo determinativo</string>
    <string name="title">GrammEsercizi * articoli. Артикли. Выберите тему</string>
    <string name="exit">Выйти</string>
    <string name="enterAns">Введите правильный ответ</string>
    <string name="checkAns">Проверить ответ</string>
    <string name="numOfRiightAns">Количество правильных ответов </string>
    <string name="next">Дальше</string>
    <string name="back">Назад</string>
</resources>
