<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".GramEx">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/numbOfRightAnsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/numOfRiightAns" />
        <TextView
            android:id="@+id/numbOfRightAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="center_horizontal"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/quest"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp" />

    <EditText
        android:id="@+id/answer"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enterAns" />

    <TextView
        android:id="@+id/res"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="" />

    <Button
        android:id="@+id/controlBut"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickControl"
        android:text="@string/checkAns" />

    <Button
        android:id="@+id/nextBut"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickA1next"
        android:text="@string/next" />

    <Button
        android:id="@+id/backBut"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBack"
        android:text="@string/back" />
</LinearLayout>