<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".GramEx">
    <TextView
        android:id="@+id/position_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text=""/>


    <TextView
        android:id="@+id/quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="24sp" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enterAns"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="" />

    <Button
        android:id="@+id/controlBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickControl"
        android:text="@string/checkAns" />


    <Button
        android:id="@+id/backBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickBack"
        android:text="@string/back" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/numbOfRightAnsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/numOfRiightAns" />

        <TextView
            android:id="@+id/numbOfRightAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="center_horizontal"
            android:text="" />
    </LinearLayout>
</LinearLayout>